Fix audience section mobile spacing - add left padding to prevent text sticking to border

--- a/style.css
+++ b/style.css
@@ -1557,6 +1557,10 @@ button {
     .audience-card img {
         height: 280px;
     }
+
+    .audience-info {
+        padding-left: 5px;
+    }
 }
 
 /* -----------------------------------------------------------------------------
